[gd_scene load_steps=38 format=3 uid="uid://dya60mvgd2ntm"]

[ext_resource type="Theme" uid="uid://hho5m4qd8ohe" path="res://resources/theme/main.tres" id="1_3evos"]
[ext_resource type="Script" path="res://menus/main_menu.gd" id="2_y1f7y"]
[ext_resource type="Texture2D" uid="uid://w336v7metces" path="res://assets/background_icons/background2.png" id="3_drwuw"]
[ext_resource type="Texture2D" uid="uid://vkbehguryo40" path="res://assets/background_icons/tree_branches.png" id="4_sw0q3"]
[ext_resource type="Texture2D" uid="uid://bk08bwsv6oc7i" path="res://assets/web_border.png" id="4_x3dha"]
[ext_resource type="Shader" path="res://world/wind.gdshader" id="5_2g2wx"]
[ext_resource type="Texture2D" uid="uid://da06dyhn5luhw" path="res://assets/background_icons/leaf1.png" id="6_i567e"]
[ext_resource type="Texture2D" uid="uid://bvbuvch1rxf6e" path="res://assets/background_icons/leaf2.png" id="7_ypjsf"]
[ext_resource type="Texture2D" uid="uid://cflssl2bbhkl0" path="res://assets/background_icons/leaf3.png" id="8_34vv8"]
[ext_resource type="Texture2D" uid="uid://cq4sexdsflati" path="res://assets/background_icons/leaf4.png" id="9_xy084"]
[ext_resource type="FontFile" uid="uid://4y2kwmcdk8ka" path="res://assets/fonts/Schoolbell-Regular.ttf" id="11_4erei"]

[sub_resource type="Curve" id="Curve_dpcxj"]
_data = [Vector2(0.00946373, 0.0457968), 0.0, 0.0, 0, 0, Vector2(0.217666, 1), 0.0, 0.0, 0, 0, Vector2(0.769716, 1), 0.0, 0.0, 0, 0, Vector2(0.996845, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_q1kre"]
curve = SubResource("Curve_dpcxj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3vt50"]
emission_shape = 3
emission_box_extents = Vector3(1280, 720, 1)
angle_min = -269.0
angle_max = 336.6
gravity = Vector3(0, -5, 0)
linear_accel_min = -32.47
linear_accel_max = 14.0
radial_accel_min = -57.61
radial_accel_max = 80.0
tangential_accel_min = -8.95
tangential_accel_max = 3.55
scale_min = 0.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_q1kre")
color = Color(0.9, 0.81675, 0.567, 0.768627)
hue_variation_min = -0.09
hue_variation_max = 0.05
turbulence_enabled = true
turbulence_noise_strength = 4.15

[sub_resource type="Gradient" id="Gradient_3ia46"]
offsets = PackedFloat32Array(0, 0.0342679, 0.046729)
colors = PackedColorArray(0.973943, 0.966453, 0.926597, 1, 0.987944, 0.984478, 0.966037, 0.462687, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4yawm"]
gradient = SubResource("Gradient_3ia46")
fill = 1
fill_from = Vector2(0.547009, 0.482906)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qg0s2"]
shader = ExtResource("5_2g2wx")
shader_parameter/x_intensity = 0.5
shader_parameter/y_intensity = 2.0
shader_parameter/offset = 2.0
shader_parameter/speed = 1.0
shader_parameter/wave_frequency = 20.0
shader_parameter/wave_length = 200.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_relij"]
shader = ExtResource("5_2g2wx")
shader_parameter/x_intensity = 3.0
shader_parameter/y_intensity = 0.5
shader_parameter/offset = 0.0
shader_parameter/speed = 3.0
shader_parameter/wave_frequency = 20.0
shader_parameter/wave_length = 200.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ojhrl"]
shader = ExtResource("5_2g2wx")
shader_parameter/x_intensity = 3.0
shader_parameter/y_intensity = 1.5
shader_parameter/offset = 0.2
shader_parameter/speed = 0.9
shader_parameter/wave_frequency = 20.0
shader_parameter/wave_length = 200.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4ufi3"]
shader = ExtResource("5_2g2wx")
shader_parameter/x_intensity = 2.5
shader_parameter/y_intensity = 0.5
shader_parameter/offset = 0.5
shader_parameter/speed = 2.0
shader_parameter/wave_frequency = 20.0
shader_parameter/wave_length = 200.0

[sub_resource type="Gradient" id="Gradient_23x0y"]
offsets = PackedFloat32Array(0.1, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.916667)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.5, 0, 0, 0, 0.499998, 0, 0, 0, 0.875, 0, 0, 0, 1, 0, 0, 0, 0.875, 0, 0, 0, 0.5, 0, 0, 0, 0)
metadata/_snap_enabled = true
metadata/_snap_count = 12

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wu63y"]
gradient = SubResource("Gradient_23x0y")
width = 512

[sub_resource type="FontVariation" id="FontVariation_v375e"]
base_font = ExtResource("11_4erei")
variation_embolden = -0.19
spacing_glyph = -4

[sub_resource type="FontVariation" id="FontVariation_uxy5u"]
base_font = ExtResource("11_4erei")
variation_embolden = 0.36

[sub_resource type="StyleBoxLine" id="StyleBoxLine_syjvi"]
content_margin_left = 20.0
content_margin_top = 4.0
content_margin_right = 20.0
content_margin_bottom = 4.0
color = Color(0.69, 0.685975, 0.4485, 1)
thickness = 8
vertical = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_yuu4k"]
content_margin_left = 20.0
content_margin_top = 4.0
content_margin_right = 20.0
content_margin_bottom = 4.0
color = Color(0.69, 0.68885, 0.621, 1)
thickness = 10
vertical = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_kdcgq"]
content_margin_left = 20.0
content_margin_top = 4.0
content_margin_right = 20.0
content_margin_bottom = 4.0
color = Color(0.69, 0.68425, 0.345, 1)
thickness = 6
vertical = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y6ydl"]
content_margin_top = 8.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jotcp"]
content_margin_top = 20.0

[sub_resource type="Gradient" id="Gradient_1kv4c"]
offsets = PackedFloat32Array(0.6, 0.7)
colors = PackedColorArray(1, 0.732, 0.33, 1, 1, 0.732, 0.33, 0)
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="GradientTexture2D" id="GradientTexture2D_87b1l"]
gradient = SubResource("Gradient_1kv4c")
width = 16
height = 16
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_8jp7n"]
offsets = PackedFloat32Array(0.6, 0.7)
colors = PackedColorArray(1, 0.8, 0.5, 1, 1, 0.732, 0.33, 0)
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2fi1s"]
gradient = SubResource("Gradient_8jp7n")
width = 16
height = 16
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_5wpxw"]
color = Color(0.8, 0.8, 0.8, 1)
thickness = 4

[sub_resource type="StyleBoxLine" id="StyleBoxLine_clf18"]
content_margin_left = 20.0
content_margin_top = 4.0
content_margin_right = 20.0
content_margin_bottom = 4.0
color = Color(1, 0.8, 0.5, 1)
thickness = 8
vertical = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_4g6lp"]
content_margin_left = 20.0
content_margin_top = 4.0
content_margin_right = 20.0
content_margin_bottom = 4.0
color = Color(1, 0.86, 0.65, 1)
thickness = 8
vertical = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_i61ni"]
content_margin_left = 20.0
content_margin_top = 4.0
content_margin_right = 20.0
content_margin_bottom = 4.0
color = Color(1, 0.732, 0.33, 1)
thickness = 6
vertical = true

[node name="MainMenu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3evos")
script = ExtResource("2_y1f7y")

[node name="Background" type="Node2D" parent="."]

[node name="BackgroundImage" type="Sprite2D" parent="Background"]
unique_name_in_owner = true
position = Vector2(960, 540)
scale = Vector2(1.1, 1.1)
texture = ExtResource("3_drwuw")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Background"]
position = Vector2(898, 528)
amount = 500
process_material = SubResource("ParticleProcessMaterial_3vt50")
texture = SubResource("GradientTexture2D_4yawm")
lifetime = 10.0

[node name="Border" type="TextureRect" parent="Background"]
modulate = Color(1, 1, 1, 0.741176)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_x3dha")
metadata/_edit_use_anchors_ = true

[node name="TreeBranches" type="Sprite2D" parent="Background"]
unique_name_in_owner = true
position = Vector2(965, 541)
scale = Vector2(1.067, 1.067)
texture = ExtResource("4_sw0q3")

[node name="Foreground" type="Node2D" parent="."]

[node name="Leaf1" type="Sprite2D" parent="Foreground"]
material = SubResource("ShaderMaterial_qg0s2")
position = Vector2(965, 541)
scale = Vector2(1.067, 1.067)
texture = ExtResource("6_i567e")

[node name="Leaf2" type="Sprite2D" parent="Foreground"]
material = SubResource("ShaderMaterial_relij")
position = Vector2(965, 541)
scale = Vector2(1.067, 1.067)
texture = ExtResource("7_ypjsf")

[node name="Leaf3" type="Sprite2D" parent="Foreground"]
material = SubResource("ShaderMaterial_ojhrl")
position = Vector2(965, 541)
scale = Vector2(1.067, 1.067)
texture = ExtResource("8_34vv8")

[node name="Leaf4" type="Sprite2D" parent="Foreground"]
material = SubResource("ShaderMaterial_4ufi3")
position = Vector2(965, 541)
scale = Vector2(1.067, 1.067)
texture = ExtResource("9_xy084")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="Title" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 170)
layout_mode = 2
texture = SubResource("GradientTexture1D_wu63y")

[node name="Label" type="Label" parent="VBoxContainer/Title"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -41.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.89, 0.838973, 0.5073, 1)
theme_override_colors/font_outline_color = Color(0.682129, 0.516149, 0.119649, 1)
theme_override_fonts/font = SubResource("FontVariation_v375e")
theme_override_font_sizes/font_size = 180
text = "Weaver"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="PlayButton" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
texture = SubResource("GradientTexture1D_wu63y")

[node name="PlayButton" type="Button" parent="VBoxContainer/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.5
offset_top = -40.5
offset_right = 106.5
offset_bottom = 40.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 0.795964, 0.511522, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.6768, 0.342, 1)
theme_override_colors/font_color = Color(0.999999, 0.755171, 0.398143, 1)
theme_override_fonts/font = SubResource("FontVariation_uxy5u")
theme_override_font_sizes/font_size = 72
theme_override_styles/hover = SubResource("StyleBoxLine_syjvi")
theme_override_styles/pressed = SubResource("StyleBoxLine_yuu4k")
theme_override_styles/normal = SubResource("StyleBoxLine_kdcgq")
text = "PLAY"

[node name="VolumeSlider" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(512, 110)
layout_mode = 2
texture = SubResource("GradientTexture1D_wu63y")

[node name="Label" type="Label" parent="VBoxContainer/VolumeSlider"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -7.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.701961, 0.678431, 0.631373, 1)
theme_override_fonts/font = ExtResource("11_4erei")
theme_override_font_sizes/font_size = 39
theme_override_styles/normal = SubResource("StyleBoxEmpty_y6ydl")
text = "Volume"
horizontal_alignment = 1

[node name="Amount" type="Label" parent="VBoxContainer/VolumeSlider"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -27.0
offset_right = 46.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.85098, 0.835294, 0.807843, 1)
theme_override_fonts/font = ExtResource("11_4erei")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxEmpty_jotcp")
text = "20%"
horizontal_alignment = 1

[node name="Volume" type="HSlider" parent="VBoxContainer/VolumeSlider"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 1.0
anchor_right = 0.7
anchor_bottom = 1.0
offset_left = 93.0
offset_top = -24.0
offset_right = -93.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_icons/grabber = SubResource("GradientTexture2D_87b1l")
theme_override_icons/grabber_highlight = SubResource("GradientTexture2D_2fi1s")
theme_override_styles/slider = SubResource("StyleBoxLine_5wpxw")
value = 20.0

[node name="Fullscreen" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(1024, 120)
layout_mode = 2
texture = SubResource("GradientTexture1D_wu63y")

[node name="Label" type="Label" parent="VBoxContainer/Fullscreen"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 3.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.701961, 0.678431, 0.631373, 1)
theme_override_fonts/font = ExtResource("11_4erei")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_y6ydl")
text = "Fullscreen
"
horizontal_alignment = 1

[node name="Fullscreen" type="Button" parent="VBoxContainer/Fullscreen"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -55.0
offset_right = 48.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.85, 0.835833, 0.8075, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.7, 0.676667, 0.63, 1)
theme_override_fonts/font = ExtResource("11_4erei")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxLine_clf18")
theme_override_styles/pressed = SubResource("StyleBoxLine_4g6lp")
theme_override_styles/normal = SubResource("StyleBoxLine_i61ni")
text = "Off"

[node name="ArachnophobiaMode" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(1024, 120)
layout_mode = 2
texture = SubResource("GradientTexture1D_wu63y")

[node name="Label" type="Label" parent="VBoxContainer/ArachnophobiaMode"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 3.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.701961, 0.678431, 0.631373, 1)
theme_override_fonts/font = ExtResource("11_4erei")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_y6ydl")
text = "Arachnophobia Mode"
horizontal_alignment = 1

[node name="PhobiaButton" type="Button" parent="VBoxContainer/ArachnophobiaMode"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -55.0
offset_right = 48.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.85, 0.835833, 0.8075, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.7, 0.676667, 0.63, 1)
theme_override_fonts/font = ExtResource("11_4erei")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxLine_clf18")
theme_override_styles/pressed = SubResource("StyleBoxLine_4g6lp")
theme_override_styles/normal = SubResource("StyleBoxLine_i61ni")
text = "Off"

[connection signal="pressed" from="VBoxContainer/PlayButton/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/VolumeSlider/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="VBoxContainer/Fullscreen/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/ArachnophobiaMode/PhobiaButton" to="." method="_on_phobia_button_pressed"]
